# fea_vulkan_compute

./: CMakeLists.global.txt  CMakeLists.txt  conanfile.txt  license  readme.md
.github/workflows/: ci.yml
include/vkc/: task.hpp  vkc.hpp  vulkan_compute.hpp
include/vkc/detail/: pimpl_ptr.hpp
src/: task.cpp  vkc.cpp
src/private_include/: buffers.hpp  ids.hpp  raw_buffer.hpp  reflection.hpp  transfer_buffer.hpp
tests/: main.cpp  mandelbrot_tests.cpp  task_benchmarks.cpp  task_tests.cpp
tests/data/shaders/: mandelbrot.comp  task_tests.comp
